# bt-implementation

./: 0001-Fix-build-with-BehaviorTree.CPP-library-installed-on.patch  0001-rename-BehaviorTree-to-BehaviorTreeV3-in-CMakeLists.patch  0002-Always-build-behavior_tree_editor-as-STATIC.patch  0003-Fix-build-with-latest-BT.CPP.patch  CMakeLists.txt  CMakeLists.txt.user.ac83db2  Dockerfile.bt-implementation  Dockerfile.navigation  Dockerfile.navigation-gazebo  Dockerfile.qscxml  Dockerfile.qscxml ubuntu:focal  Dockerfile.scope  Dockerfile.yarp-mesa  Dockerfile0.bt-implementation  Dockerfile0.navigation-gazebo  Dockerfile1.bt-implementation  Dockerfile2.bt-implementation  README-gazebo.md  README.md  docker-compose.yml  from_xml_example.cpp  main.cpp  start.sh
cmake/: CMakeLists.txt  SkillAutogen-foreach.cmake  SkillAutogen.cmake
cmake/not_used/: Config.cmake.in  exampleSkillAutogen.cmake
conf/: GoToDestination.ini  IsAtDestination.ini
deb/: gammaray-plugin-quickinspector_2.11.0-1_amd64.deb  gammaray-plugin-quickinspector_2.11.0-3~0r1_amd64.deb  gammaray-plugin-quickinspector_2.11.0-3~0r3_amd64.deb  gammaray-plugin-statemachineviewer_2.11.0-1_amd64.deb  gammaray-plugin-statemachineviewer_2.11.0-3~0r1_amd64.deb  gammaray-plugin-statemachineviewer_2.11.0-3~0r3_amd64.deb  gammaray_2.11.0-3~0r1_amd64.deb  gammaray_2.11.0-3~0r3_amd64.deb  kdstatemachineeditor-dev_1.2.7-0r1_amd64.deb  kdstatemachineeditor-dev_1.2.7-0r4_amd64.deb  libkdstatemachineeditor-core1.2.7_1.2.7-0r1_amd64.deb  libkdstatemachineeditor-core1.2.7_1.2.7-0r4_amd64.deb  libkdstatemachineeditor-debuginterfaceclient1.2.7_1.2.7-0r1_amd64.deb  libkdstatemachineeditor-debuginterfaceclient1.2.7_1.2.7-0r4_amd64.deb  libkdstatemachineeditor-view1.2.7_1.2.7-0r1_amd64.deb  libkdstatemachineeditor-view1.2.7_1.2.7-0r4_amd64.deb  libqt5remoteobjects5-bin_5.12.6-1_amd64.deb  libqt5remoteobjects5-dev_5.12.6-1_amd64.deb  libqt5remoteobjects5_5.12.6-1_amd64.deb  libqt5scxml5-bin_5.12.5-3~0r2_amd64.deb  libqt5scxml5-dev_5.12.5-3~0r2_amd64.deb  libqt5scxml5-private-dev_5.12.5-2_amd64.deb  libqt5scxml5-private-dev_5.12.5-3~0r2_amd64.deb  libqt5scxml5_5.12.5-3~0r2_amd64.deb  qml-module-qtremoteobjects_5.12.6-1_amd64.deb  qml-module-qtscxml_5.12.5-3~0r2_amd64.deb
docker1b-slam-cuda10_1/: startup_commands.sh  test.sh
include/: yarp_action.h  yarp_condition.h  yarp_node.h
maps/: locations.ini  map_test_grid.yaml
src/: CMakeLists.txt  yarp_action.cpp  yarp_condition.cpp  yarp_node.cpp
src/Arm_component/: ArmComponent.cpp
src/Arm_protocol/: ArmServiceMonitorObject.cpp  CMakeLists.txt  arm_commands.thrift
src/BT/: CMakeLists.txt  from_xml_example.cpp  main.cpp  test_action_BT.xml  test_battery_BT.xml  yarp_action.cpp  yarp_condition.cpp  yarp_node.cpp  yarp_node.h
src/BT_protocol/: BT_wrappers.thrift  CMakeLists.txt  Skill_request.cpp  Skill_request.h  Skill_requestMonitorObject.cpp  Skill_requestMonitorObject.h
src/BT_protocol/srv/: BT_wrappers.srv
src/BatteryLevel_skill/: BatteryLevelSkill.cpp  BatteryLevelSkill.h  BatteryLevelSkillDataModel.cpp  BatteryLevelSkillDataModel.h  BatteryLevelSkillStateMachine.scxml  CMakeLists.txt  main.cpp
src/BatteryNotCharging_skill/: BatteryNotChargingSkill.cpp  BatteryNotChargingSkill.h  BatteryNotChargingSkillDataModel.cpp  BatteryNotChargingSkillDataModel.h  BatteryNotChargingSkillStateMachine.scxml  CMakeLists.txt  main.cpp
src/Battery_component/: BatteryComponent.cpp  BatteryComponent_ROSNode.cpp  CMakeLists.txt
src/Battery_protocol/: BatteryReader.cpp  BatteryReaderMonitorObject.cpp  BatteryReaderMonitorObject.h  CMakeLists.txt  battery_commands.thrift
src/Blackboard_component/: BlackboardComponent.cpp  entries.ini
src/Blackboard_protocol/: CMakeLists.txt  blackboard_commands.thrift
src/Fetch_skill/: FetchSkillStateMachine.scxml
src/GoTo_component/: CMakeLists.txt  GoToComponent.cpp
src/GoTo_protocol/: CMakeLists.txt  GoTo.thrift  GoToMonitorObject.cpp  GoToMonitorObject.h
src/GoTo_skill/: CMakeLists.txt  CMakeLists.txt.autosave  GoToSkill.cpp  GoToSkill.h  GoToSkillDataModel.cpp  GoToSkillDataModel.h  GoToSkillStateMachine.scxml  main.cpp
src/IsAt_skill/: IsAtSkillStateMachine.scxml
src/IsFetched_skill/: IsFetchedSkillStateMachine.scxml
src/Monitor/: BatteryLevelMonitor.scxml  ChargingStationMonitor.scxml  DestinationMonitor.scxml  GraspMonitor.scxml  MonitorWidget.qml  TargetMonitor.scxml  main.cpp  monitor.qml  res.qrc
src/battery_component/: BatteryComponent.cpp  CMakeLists.txt
src/battery_protocol/: CMakeLists.txt
src/catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
src/catkin_ws/src/beginner_tutorials/src/: GoToComponent.cpp  add_two_ints_client.cpp  add_two_ints_server.cpp
src/catkin_ws/src/beginner_tutorials/srv/: AddTwoInts.srv
src/fakeBatteryChargingStation/: CMakeLists.txt  fakeBatteryChargingStation.cpp
src/portmonitor_carrier/: PortMonitor.cpp
src/skill-code-gen/: CMakeLists.txt  ConfMake.sh  GenerateAll.sh  Remove.sh  SkillConfigReader.cpp  SkillConfigReader.h  SkillGenerator.cpp  SkillGenerator.h  SkillGenerator_version_multiple_client_ports.cpp  main.cpp  ports-connect-description.txt  qscxmlcompiler.cpp  qscxmlcompiler_p.h  readme.txt
src/skill-code-gen/input-files/: BatteryLevelSkillStateMachine.scxml  BatteryNotChargingSkillStateMachine.scxml  GoToSkillStateMachine.scxml
src/skill-code-gen/input-files/config-skills/: BatteryLevelSkill.conf  GoToSkill.conf
src/skill-code-gen/output-files/BatteryLevel_skill/: BatteryLevelSkill.cpp  BatteryLevelSkill.h  BatteryLevelSkillDataModel.cpp  BatteryLevelSkillDataModel.h
src/skill-code-gen/output-files/BatteryNotCharging_skill/: BatteryNotChargingSkill.cpp  BatteryNotChargingSkill.h  BatteryNotChargingSkillDataModel.cpp  BatteryNotChargingSkillDataModel.h
src/skill-code-gen/output-files/GoTo_skill/: GoToSkill.cpp  GoToSkill.h  GoToSkillDataModel.cpp  GoToSkillDataModel.h
src/skill-code-gen/skill-template-files/: CMakeLists_txt.t  Name_SkillDataModel_cpp.t  Name_SkillDataModel_h.t  Name_Skill_cpp.t  Name_Skill_h.t  main_cpp.t
xmls/: test_action_BT.xml
(+12 files in other folders)
